[tool.poetry]
name = "sponet"
version = "2.6.2"
description = "Spreading Processes on Networks"
license = "GPL-3.0-or-later"
authors = ["Marvin Lücke"]
readme = "README.md"
repository = "https://github.com/lueckem/SPoNet"
keywords = [
    "voter model",
    "threshold model",
    "social dynamics",
    "opinion dynamics",
    "statistical physics",
    "agent-based model",
    "epidemiology",
    "interacting particle system"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = ">=1.21"
numba = ">=0.56"
networkx = ">=2.8.4"
scipy = ">=1.9.3"
matplotlib = ">=3.6.0"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
black = "^24.3.0"


[tool.poetry.group.notebooks]
optional = true

[tool.poetry.group.notebooks.dependencies]
ipykernel = "^6.22.0"
matplotlib = "^3.7.1"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"