[project]
name = "sponet"
version = "2.8.0"
description = "Spreading Processes on Networks"
license = "GPL-3.0-or-later"
authors = [{name = "Marvin Lücke"}]
readme = "README.md"
repository = "https://github.com/lueckem/SPoNet"
keywords = [
    "voter model",
    "threshold model",
    "social dynamics",
    "opinion dynamics",
    "statistical physics",
    "agent-based model",
    "epidemiology",
    "interacting particle system"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics"
]
requires-python = ">=3.10,<3.15"
dependencies = [
  "numba>=0.56",
  "networkx>=2.8.4",
  "scipy>=1.9.3",
  "tqdm (>=4.67.1,<5.0.0)",
]

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=7.3.0"
pytest-cov = ">=4.0.0"
black = ">=24.3.0"


[tool.poetry.group.notebooks]
optional = true

[tool.poetry.group.notebooks.dependencies]
matplotlib = ">=3.6.0"
marimo = ">= 0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
