[project]
name = "sponet"
version = "3.0.0"
description = "Spreading Processes on Networks"
license = "GPL-3.0-or-later"
authors = [{name = "Marvin Lücke"}]
readme = "README.md"
keywords = [
    "voter model",
    "threshold model",
    "social dynamics",
    "opinion dynamics",
    "statistical physics",
    "agent-based model",
    "epidemiology",
    "interacting particle system"
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics"
]
requires-python = ">=3.10,<3.15"
dependencies = [
  "numba>=0.56",
  "networkx>=2.8.4",
  "scipy>=1.9.3",
  "tqdm (>=4.67.1,<5.0.0)",
]

[project.urls]
Documentation = "https://lueckem.github.io/SPoNet"
Repository = "https://github.com/lueckem/SPoNet"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=7.3.0"
pytest-cov = ">=4.0.0"
black = ">=24.3.0"

[tool.poetry.group.notebooks]
optional = true

[tool.poetry.group.notebooks.dependencies]
matplotlib = ">=3.6.0"
marimo = ">= 0.19.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.6.0,<2.0.0"
mkdocstrings-python = ">=2.0.0"
mkdocs-material = ">= 9.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
